[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/Comfortaa35.tres" type="DynamicFont" id=1]
[ext_resource path="res://Card/CardBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/DeckEditor.gd" type="Script" id=3]
[ext_resource path="res://Scenes/fade_in/FadeIn.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Fonts/Landasans50.tres" type="DynamicFont" id=5]


[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Screen" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopRow" type="HBoxContainer" parent="Screen"]
margin_right = 1280.0
margin_bottom = 46.0

[node name="Label" type="Label" parent="Screen/TopRow"]
margin_top = 3.0
margin_right = 216.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 1 )
text = "Deck Editor"

[node name="CenterContainer" type="CenterContainer" parent="Screen/TopRow"]
margin_left = 220.0
margin_right = 1174.0
margin_bottom = 46.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Screen/TopRow"]
margin_left = 1178.0
margin_right = 1280.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 1 )
text = "Back"

[node name="Panels" type="HBoxContainer" parent="Screen"]
margin_top = 50.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CardContainer" type="VBoxContainer" parent="Screen/Panels"]
margin_right = 1026.0
margin_bottom = 670.0
size_flags_horizontal = 3

[node name="CardRow" type="HBoxContainer" parent="Screen/Panels/CardContainer"]
margin_right = 1026.0
margin_bottom = 300.0
custom_constants/separation = 10
__meta__ = {
"_edit_group_": true
}

[node name="CardBase" parent="Screen/Panels/CardContainer/CardRow" instance=ExtResource( 2 )]
cardName = "Seeker, Sacred Wingal"

[node name="CardBase2" parent="Screen/Panels/CardContainer/CardRow" instance=ExtResource( 2 )]
margin_left = 230.0
margin_right = 450.0
cardName = "Dragheart, Luard"

[node name="CardBase3" parent="Screen/Panels/CardContainer/CardRow" instance=ExtResource( 2 )]
margin_left = 460.0
margin_right = 680.0
cardName = "Dragonic Overlord"

[node name="CardBase4" parent="Screen/Panels/CardContainer/CardRow" instance=ExtResource( 2 )]
margin_left = 690.0
margin_right = 910.0
cardName = "Illusionary Revenger, Mordred Phantom"

[node name="CardRow2" type="HBoxContainer" parent="Screen/Panels/CardContainer"]
margin_top = 304.0
margin_right = 1026.0
margin_bottom = 604.0
custom_constants/separation = 10
__meta__ = {
"_edit_group_": true
}

[node name="CardBase" parent="Screen/Panels/CardContainer/CardRow2" instance=ExtResource( 2 )]
cardName = "Dragonic Overlord"

[node name="CardBase2" parent="Screen/Panels/CardContainer/CardRow2" instance=ExtResource( 2 )]
margin_left = 230.0
margin_right = 450.0
cardName = "Dragonic Blademaster"

[node name="CardBase3" parent="Screen/Panels/CardContainer/CardRow2" instance=ExtResource( 2 )]
margin_left = 460.0
margin_right = 680.0
cardName = "Blaster Blade"

[node name="CardBase4" parent="Screen/Panels/CardContainer/CardRow2" instance=ExtResource( 2 )]
margin_left = 690.0
margin_right = 910.0
cardName = "Dragheart, Luard"

[node name="CardDisplay" type="VBoxContainer" parent="Screen/Panels"]
margin_left = 1030.0
margin_right = 1280.0
margin_bottom = 670.0
rect_min_size = Vector2( 250, 0 )
size_flags_vertical = 3

[node name="CardBase" parent="Screen/Panels/CardDisplay" instance=ExtResource( 2 )]
margin_right = 250.0

[node name="CardDescription" type="Label" parent="Screen/Panels/CardDisplay"]
margin_top = 304.0
margin_right = 250.0
margin_bottom = 318.0

[node name="LineEdit" type="LineEdit" parent="Screen/Panels/CardDisplay"]
margin_top = 322.0
margin_right = 250.0
margin_bottom = 346.0
placeholder_text = "Type Card Name"
placeholder_alpha = 1.0

[node name="CardsSearched" type="VBoxContainer" parent="Screen/Panels/CardDisplay"]
margin_top = 350.0
margin_right = 250.0
margin_bottom = 350.0

[node name="CardSearched" type="HBoxContainer" parent="."]
margin_left = 1030.0
margin_top = 400.0
margin_right = 1280.0
margin_bottom = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardBase2" parent="CardSearched" instance=ExtResource( 2 )]
margin_right = 80.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 100 )
cardName = ""
size_loocked = false

[node name="CardName" type="Label" parent="CardSearched"]
margin_left = 84.0
margin_top = 25.0
margin_right = 84.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 5 )

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
[connection signal="text_changed" from="Screen/Panels/CardDisplay/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
